--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ajr_190710057</string>
+    <string name="app_name">Atma Jogja Rental</string>
 </resources>
